<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="gameEndVM"
            type="com.davek.tictactoe.viewmodels.GameEndViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_dialog_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:textColor="@color/black"
            android:textSize="35sp"
            app:gameEndDialogTitle="@{gameEndVM.gameResult}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_replay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Win" />

        <Button
            android:id="@+id/btn_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_result_finish_button"
            android:onClick="@{() -> gameEndVM.onFinishButtonClick()}"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_replay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_result_request_replay_button"
            android:onClick="@{() -> gameEndVM.onReplayButtonClick()}"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_finish" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:enabled="@{gameEndVM.isSaveButtonEnabled}"
            android:onClick="@{() -> gameEndVM.onSaveButtonClick()}"
            android:text="@string/dialog_result_save_game_button"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_replay" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>